--- a/index.html
+++ b/index.html
@@ -137,24 +137,28 @@
                             <div class="layer absolute index-2"></div>
                             <div class="header__tecnology_img flex g-10px">
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/github.png" alt=""
+                                    <img class="header__skills-dimentions" src="img/github.png" alt="FBOH tecnologias"
                                         draggable="false">
                                     <p><b>GitHub</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/figma.png" alt="" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/figma.png" alt="FBOH tecnologias" draggable="false">
                                     <p><b>Figma</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/html5.png" alt="" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/javascript.png" alt="FBOH tecnologias" draggable="false">
+                                    <p><b>Javascript</b></p>
+                                </div>
+                                <div class="flex-justify-align-center-direction g-10px">
+                                    <img class="header__skills-dimentions" src="img/html5.png" alt="FBOH tecnologias" draggable="false">
                                     <p><b>HTML5</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/css3.png" alt="" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/css3.png" alt="FBOH tecnologias" draggable="false">
                                     <p><b>CSS3</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/php.png" alt="" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/php.png" alt="FBOH tecnologias" draggable="false">
                                     <p><b>PHP</b></p>
                                 </div>
                             </div>
