Agregando descripcion seccion PROYECTOS

--- a/index.html
+++ b/index.html
@@ -229,10 +229,13 @@
     </section>
     <main class="page">
         <section id="proyects" class="proyects flex-justify-align-center-direction g-56px">
-            <h2>Proyectos</h2>
-            <!-- <h3></h3> -->
+            <div class="flex-justify-align-center-direction g-medium">
+                <h2 class="proyects_title">🛠️ Mis Proyectos</h2>
+                <h3 class="proyects_descripcion">
+                    En esta sección, encontrarás mis proyectos de desarrollo web, tanto frontend como backend. Cada uno muestra mi habilidad con tecnologías nativas y mi dedicación al aprendizaje continuo. Utilizo HTML, CSS, JavaScript, PHP y MySQL en un entorno XAMPP. 🚀💻🌐
+                </h3>
+            </div>
             <div id="cardProyects" class="cardProyects flex-justify-align-center flex-wrap p-x-medium">
-
             </div>
         </section>
         <section id="iconproyect">
