Agregando mi foto en la presentación

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="presentation-layer-photo absolute index-2">
-                    <img class="photo" src="img/my_photo.png" alt="Perfil Hugo Sanchez Valencia FBOH" draggable="false">
+                    <img class="photo" src="img/my_perfil_presentation.png" alt="Perfil Hugo Sanchez Valencia FBOH" draggable="false">
                 </div>
             </div>
             <div class="absolute vector-bottom-right-animation-mobile">
