personalizando los vectores de la presentación

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <section id="inicio" class="presentation flex-justify-align-center">
         <header class="header flex relative">
             <div class="absolute vector-top-left-animation-mobile">
-                <svg class="header-vector absolute header-vector-row-2 index-2" width="103" height="367"
-                    viewBox="0 0 103 367" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g filter="url(#filter0_d_5_94)">
-                        <path d="M26 23L0 367V0H103V23H26Z" fill="url(#paint0_radial_5_94)" />
+                <svg class="header-vector absolute header-vector-row-2 index-2" width="103" height="367" viewBox="0 0 103 367" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <g filter="url(#filter0_d_15_343)">
+                        <path d="M25.9968 23L-0.00323486 367V0H70.9968L102.997 23H25.9968Z"
+                            fill="url(#paint0_radial_15_343)" />
                     </g>
                     <defs>
-                        <filter id="filter0_d_5_94" x="-30" y="0" width="163" height="427" filterUnits="userSpaceOnUse"
-                            color-interpolation-filters="sRGB">
+                        <filter id="filter0_d_15_343" x="-30.0032" y="0" width="163" height="427"
+                            filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix" />
                             <feColorMatrix in="SourceAlpha" type="matrix"
                                 values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
@@ -33,11 +34,11 @@
                             <feComposite in2="hardAlpha" operator="out" />
                             <feColorMatrix type="matrix"
                                 values="0 0 0 0 0.87451 0 0 0 0 0.741176 0 0 0 0 0.960784 0 0 0 0.25 0" />
-                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_5_94" />
-                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_5_94" result="shape" />
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_15_343" />
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_15_343" result="shape" />
                         </filter>
-                        <radialGradient id="paint0_radial_5_94" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
-                            gradientTransform="translate(103 5.70777e-06) rotate(136.425) scale(142.173 264.191)">
+                        <radialGradient id="paint0_radial_15_343" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
+                            gradientTransform="translate(102.997 5.70777e-06) rotate(136.425) scale(142.173 264.191)">
                             <stop stop-color="#E3BCF5" />
                             <stop offset="0.37" stop-color="#C1C2F4" />
                         </radialGradient>
@@ -46,12 +47,13 @@
 
                 <svg class="header-vector relative" width="103" height="443" viewBox="0 0 103 443" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
-                    <g filter="url(#filter0_d_5_95)">
-                        <path d="M26 23L0 443V0H103V23H26Z" fill="url(#paint0_radial_5_95)" />
+                    <g filter="url(#filter0_d_15_341)">
+                        <path d="M25.9968 23L-0.00323486 443V0H70.9968L102.997 23H25.9968Z"
+                            fill="url(#paint0_radial_15_341)" />
                     </g>
                     <defs>
-                        <filter id="filter0_d_5_95" x="-30" y="0" width="163" height="503" filterUnits="userSpaceOnUse"
-                            color-interpolation-filters="sRGB">
+                        <filter id="filter0_d_15_341" x="-30.0032" y="0" width="163" height="503"
+                            filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix" />
                             <feColorMatrix in="SourceAlpha" type="matrix"
                                 values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
@@ -60,16 +62,17 @@
                             <feComposite in2="hardAlpha" operator="out" />
                             <feColorMatrix type="matrix"
                                 values="0 0 0 0 0.87451 0 0 0 0 0.741176 0 0 0 0 0.960784 0 0 0 0.25 0" />
-                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_5_95" />
-                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_5_95" result="shape" />
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_15_341" />
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_15_341" result="shape" />
                         </filter>
-                        <radialGradient id="paint0_radial_5_95" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
-                            gradientTransform="translate(103 5.70777e-06) rotate(136.425) scale(142.172 264.191)">
+                        <radialGradient id="paint0_radial_15_341" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
+                            gradientTransform="translate(102.997 5.70777e-06) rotate(136.425) scale(142.172 264.191)">
                             <stop stop-color="#E3BCF5" />
                             <stop offset="0.37" stop-color="#C1C2F4" />
                         </radialGradient>
                     </defs>
                 </svg>
+
             </div>
             <div class="lasso flex-align-center justify-end">
                 <ul class="lasso__list flex g-medium fz-14">
@@ -142,23 +145,28 @@
                                     <p><b>GitHub</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/figma.png" alt="FBOH tecnologias" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/figma.png" alt="FBOH tecnologias"
+                                        draggable="false">
                                     <p><b>Figma</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/javascript.png" alt="FBOH tecnologias" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/javascript.png"
+                                        alt="FBOH tecnologias" draggable="false">
                                     <p><b>Javascript</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/html5.png" alt="FBOH tecnologias" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/html5.png" alt="FBOH tecnologias"
+                                        draggable="false">
                                     <p><b>HTML5</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/css3.png" alt="FBOH tecnologias" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/css3.png" alt="FBOH tecnologias"
+                                        draggable="false">
                                     <p><b>CSS3</b></p>
                                 </div>
                                 <div class="flex-justify-align-center-direction g-10px">
-                                    <img class="header__skills-dimentions" src="img/php.png" alt="FBOH tecnologias" draggable="false">
+                                    <img class="header__skills-dimentions" src="img/php.png" alt="FBOH tecnologias"
+                                        draggable="false">
                                     <p><b>PHP</b></p>
                                 </div>
                             </div>
@@ -166,63 +174,66 @@
                     </div>
                 </div>
                 <div class="presentation-layer-photo absolute index-2">
-                    <img class="photo" src="img/my_perfil_presentation.png" alt="Perfil Hugo Sanchez Valencia FBOH" draggable="false">
+                    <img class="photo" src="img/my_perfil_presentation.png" alt="Perfil Hugo Sanchez Valencia FBOH"
+                        draggable="false">
                 </div>
             </div>
             <div class="absolute vector-bottom-right-animation-mobile">
-                <svg class="header-vector-bottom-right-row1 absolute index-2" width="103" height="443" viewBox="0 0 103 443"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g filter="url(#filter0_d_5_93)">
-                        <path d="M77 420.003L103 0.00292969L103 443.003H0V420.003H77Z" fill="url(#paint0_radial_5_93)" />
+                <svg class="header-vector-bottom-right-row1 absolute index-2" width="103" height="443"
+                    viewBox="0 0 103 443" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g filter="url(#filter0_d_15_345)">
+                        <path d="M0 420.003H77L102.814 3L103 0.00292969L103 443.003H32L0 420.003Z"
+                            fill="url(#paint0_radial_15_345)" />
                     </g>
                     <defs>
-                        <filter id="filter0_d_5_93" x="-30" y="0.00292969" width="163" height="503"
+                        <filter id="filter0_d_15_345" x="-30" y="0.00292969" width="163" height="503"
                             filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                                result="hardAlpha" />
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
                             <feOffset dy="30" />
                             <feGaussianBlur stdDeviation="15" />
                             <feComposite in2="hardAlpha" operator="out" />
                             <feColorMatrix type="matrix"
                                 values="0 0 0 0 0.87451 0 0 0 0 0.741176 0 0 0 0 0.960784 0 0 0 0.25 0" />
-                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_5_93" />
-                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_5_93" result="shape" />
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_15_345" />
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_15_345" result="shape" />
                         </filter>
-                        <radialGradient id="paint0_radial_5_93" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
+                        <radialGradient id="paint0_radial_15_345" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
                             gradientTransform="translate(-5.11131e-05 443.003) rotate(-43.575) scale(142.172 264.191)">
                             <stop stop-color="#E3BCF5" />
                             <stop offset="0.37" stop-color="#C1C2F4" />
                         </radialGradient>
                     </defs>
                 </svg>
-                <svg class="header-vector-bottom-right-row2 absolute index-2" width="103" height="638" viewBox="0 0 103 638"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g filter="url(#filter0_d_5_92)">
-                        <path d="M76.9935 540L102.994 0L102.994 638H-0.00646973V615H76.9935V540Z"
-                            fill="url(#paint0_radial_5_92)" />
+                <svg class="header-vector-bottom-right-row2 absolute index-2" width="103" height="638"
+                    viewBox="0 0 103 638" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g filter="url(#filter0_d_15_347)">
+                        <path d="M76.9935 540L102.994 0L102.994 638H32L-0.00646973 615H76.9935V540Z"
+                            fill="url(#paint0_radial_15_347)" />
                     </g>
                     <defs>
-                        <filter id="filter0_d_5_92" x="-30.0065" y="0" width="163" height="698" filterUnits="userSpaceOnUse"
-                            color-interpolation-filters="sRGB">
+                        <filter id="filter0_d_15_347" x="-30.0065" y="0" width="163" height="698"
+                            filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                                result="hardAlpha" />
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
                             <feOffset dy="30" />
                             <feGaussianBlur stdDeviation="15" />
                             <feComposite in2="hardAlpha" operator="out" />
                             <feColorMatrix type="matrix"
                                 values="0 0 0 0 0.87451 0 0 0 0 0.741176 0 0 0 0 0.960784 0 0 0 0.25 0" />
-                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_5_92" />
-                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_5_92" result="shape" />
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_15_347" />
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_15_347" result="shape" />
                         </filter>
-                        <radialGradient id="paint0_radial_5_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
+                        <radialGradient id="paint0_radial_15_347" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse"
                             gradientTransform="translate(-0.00652084 638) rotate(-43.575) scale(142.172 264.191)">
                             <stop stop-color="#E3BCF5" />
                             <stop offset="0.37" stop-color="#C1C2F4" />
                         </radialGradient>
                     </defs>
                 </svg>
+
             </div>
 
         </header>
@@ -232,7 +243,9 @@
             <div class="flex-justify-align-center-direction g-medium">
                 <h2 class="proyects_title">🛠️ Mis Proyectos</h2>
                 <h3 class="proyects_descripcion">
-                    En esta sección, encontrarás mis proyectos de desarrollo web, tanto frontend como backend. Cada uno muestra mi habilidad con tecnologías nativas y mi dedicación al aprendizaje continuo. Utilizo HTML, CSS, JavaScript, PHP y MySQL en un entorno XAMPP. 🚀💻🌐
+                    En esta sección, encontrarás mis proyectos de desarrollo web, tanto frontend como backend. Cada uno
+                    muestra mi habilidad con tecnologías nativas y mi dedicación al aprendizaje continuo. Utilizo HTML,
+                    CSS, JavaScript, PHP y MySQL en un entorno XAMPP. 🚀💻🌐
                 </h3>
             </div>
             <div id="cardProyects" class="cardProyects flex-justify-align-center flex-wrap p-x-medium">
