Actualizando encabezado de la presentacion

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                         </radialGradient>
                     </defs>
                 </svg>
-
                 <svg class="header-vector relative" width="103" height="443" viewBox="0 0 103 443" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g filter="url(#filter0_d_15_341)">
@@ -72,7 +71,6 @@
                         </radialGradient>
                     </defs>
                 </svg>
-
             </div>
             <div class="lasso flex-align-center justify-end">
                 <ul class="lasso__list flex g-medium fz-14">
@@ -98,8 +96,8 @@
                 <div class="portfolio relative flex-direction index-3 p-x-medium width-regular g-medium">
                     <h1 class="portfolio__title">
                         ¡Hola! Soy Hugo,
-                        desarrollador web
-                        <span class="tag-frontend">Frontend</span>
+                        <span class="tag-frontend"><br>{Front-end Developer}</span>
+                        
                     </h1>
                     <p class="portfolio__description">
                         Además, tengo experiencia en <span class="tag-blue">Design Ux - Ui</span> y <span
@@ -252,7 +250,6 @@
             </div>
         </section>
         <section id="iconproyect">
-
         </section>
     </main>
     <script src="components/showProyects.js" type="module"></script>
