Actualizando css encabezado de la presentación

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 </nav>
                 <div class="portfolio relative flex-direction index-3 p-x-medium width-regular g-medium">
                     <h1 class="portfolio__title">
-                        ¡Hola! Soy Hugo,
-                        <span class="tag-frontend"><br>{Front-end Developer}</span>
+                        ¡Hola! Soy Hugo,<br>
+                        <span class="tag-frontend">{Front-end Developer}</span>
                         
                     </h1>
                     <p class="portfolio__description">
