Se agregaron las siguientes interfaces [-Tab filtros por categoria - nuevo diseño para el tab Design ux-ui - Modal para las card tab design ux-ui, -cerrar moda, -responsive]

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/vector.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>FBOH</title>
@@ -17,8 +18,8 @@
     <section id="inicio" class="presentation flex-justify-align-center">
         <header class="header flex relative">
             <div class="absolute vector-top-left-animation-mobile">
-                <svg class="header-vector absolute header-vector-row-2 index-2" width="103" height="367" viewBox="0 0 103 367" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <svg class="header-vector absolute header-vector-row-2 index-2" width="103" height="367"
+                    viewBox="0 0 103 367" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g filter="url(#filter0_d_15_343)">
                         <path d="M25.9968 23L-0.00323486 367V0H70.9968L102.997 23H25.9968Z"
                             fill="url(#paint0_radial_15_343)" />
@@ -97,7 +98,7 @@
                     <h1 class="portfolio__title">
                         ¡Hola! Soy Hugo,<br>
                         <span class="tag-frontend">{Front-end Developer}</span>
-                        
+
                     </h1>
                     <p class="portfolio__description">
                         Además, tengo experiencia en <span class="tag-blue">Design Ux - Ui</span> y <span
@@ -245,6 +246,12 @@
                     muestra mi habilidad con tecnologías nativas y mi dedicación al aprendizaje continuo. Utilizo HTML,
                     CSS, JavaScript, PHP y MySQL en un entorno XAMPP. 🚀💻🌐
                 </h3>
+            </div>
+            <div class="tabs flex flex-wrap justify-center">
+                <div id="tab-frontend" aria-controls="frontend" class="tab tab-hover">Frontend</div>
+                <div id="tab-backend" aria-controls="backend" class="tab tab-hover">Backend</div>
+                <div id="tab-design" aria-controls="design" class="tab tab-hover">Design ux - ui</div>
+                <div id="tab-frontenmentor" aria-controls="frontendmentor" class="tab tab-hover">FrontendMentor</div>
             </div>
             <div id="cardProyects" class="cardProyects flex-justify-align-center flex-wrap p-x-medium">
             </div>
