Actualizando diseño de las cards

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <div id="tab-design" aria-controls="design" class="tab tab-hover">Design ux - ui</div>
                 <div id="tab-frontenmentor" aria-controls="frontendmentor" class="tab tab-hover">FrontendMentor</div>
             </div>
-            <div id="cardProyects" class="cardProyects flex-justify-align-center flex-wrap p-x-medium">
+            <div id="cardProyects" class="cardProyects">
             </div>
         </section>
         <section id="iconproyect">
