--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://hunigolesan.github.io/HugoSan/index.html">
     <meta name="google-site-verification" content="DtaThtAq71PmsvQGiWbyBJZ89WNU8rt5QrbKjcZGWBg" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/vector.css">
